update github.com/kissjgabi/kiss jekyll step-by-step tutorial

--- a/_layouts/sbsdefault.html
+++ b/_layouts/sbsdefault.html
@@ -17,9 +17,9 @@ layout: default
     </style>
   </head>
   <body>
+    {% include mynavigation.html %}
     <h1>{{ page.title | upcase }}</h1>
-
-    {{ content }}
+        {{ content }}
   </body>
 </html>
 
