--- a/_layouts/mydefault.html
+++ b/_layouts/mydefault.html
@@ -8,6 +8,7 @@ layout: default
     <title>{{ page.title }}</title>
   </head>
   <body>
+    {% include mynavigation.html %}
     {{ content }}
   </body>
 </html>
