update github.com/kissjgabi/kiss jekyll step-by-step tutorial

--- a/_includes/mynavigation.html
+++ b/_includes/mynavigation.html
@@ -1,7 +1,7 @@
 <nav> ¤
   {% for item in site.data.mynavigation %}
     <a href="{{ item.link | relative_url }}"
-            {% if page.url == item.link %} style="color: red;"{% endif %}>
+            {% if page.url == item.link %}class="current"{% endif %}>
       {{ item.name }}
     </a> ¤
   {% endfor %}
