--- a/_layouts/author.html
+++ b/_layouts/author.html
@@ -1,15 +1,18 @@
 ---
 layout: default
 ---
-<h1>{{ page.name }}</h1>
-<h2>{{ page.position }}</h2>
+    <link rel="icon" type="image/x-icon" href={{ "/favicon.ico" | relative_url }} />
+    <link rel="shortcut icon" type="image/x-icon" href={{ "/favicon.ico" | relative_url }} />
 
-{{ content }}
+    <h1>{{ page.name }}</h1>
+    <h2>{{ page.position }}</h2>
 
-<h2>Posts</h2>
-<ul>
-  {% assign filtered_posts = site.posts | where: 'author', page.short_name %}
-  {% for post in filtered_posts %}
-    <li><a href="{{ post.url | relative_url }}">{{ post.title }}</a></li>
-  {% endfor %}
-</ul>
+    {{ content }}
+
+    <h2>Posts</h2>
+    <ul>
+      {% assign filtered_posts = site.posts | where: 'author', page.short_name %}
+      {% for post in filtered_posts %}
+        <li><a href="{{ post.url | relative_url }}">{{ post.title }}</a></li>
+      {% endfor %}
+    </ul>
