--- a/_layouts/mydefault.html
+++ b/_layouts/mydefault.html
@@ -1,6 +1,9 @@
 ---
 layout: default
 ---
+    <link rel="icon" type="image/x-icon" href={{ "/favicon.ico" | relative_url }} />
+    <link rel="shortcut icon" type="image/x-icon" href={{ "/favicon.ico" | relative_url }} />
+
     {% include mynavigation.html %}
     {{ content }}
 
