--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,14 +1,17 @@
 ---
 layout: default
 ---
-<h1>{{ page.title }}</h1>
+    <link rel="icon" type="image/x-icon" href={{ "/favicon.ico" | relative_url }} />
+    <link rel="shortcut icon" type="image/x-icon" href={{ "/favicon.ico" | relative_url }} />
 
-<p>
-  {{ page.date | date_to_string }}
-  {% assign author = site.authors | where: 'short_name', page.author | first %}
-  {% if author %}
-    - <a href="{{ author.url | relative_url }}">{{ author.name }}</a>
-  {% endif %}
-</p>
+   <h1>{{ page.title }}</h1>
 
-{{ content }}
+    <p>
+      {{ page.date | date_to_string }}
+      {% assign author = site.authors | where: 'short_name', page.author | first %}
+      {% if author %}
+        - <a href="{{ author.url | relative_url }}">{{ author.name }}</a>
+      {% endif %}
+    </p>
+
+    {{ content }}
