--- a/_layouts/sbsdefault.html
+++ b/_layouts/sbsdefault.html
@@ -1,7 +1,9 @@
 ---
 layout: default
 ---
-<!doctype html>
+    <link rel="icon" type="image/x-icon" href={{ "/favicon.ico" | relative_url }} />
+    <link rel="shortcut icon" type="image/x-icon" href={{ "/favicon.ico" | relative_url }} />
+
     {% include mynavigation.html %}
     <h1>{{ page.title | upcase }}</h1>
         {{ content }}
