--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,9 +1,6 @@
 ---
 layout: default
 ---
-    <link rel="icon" type="image/x-icon" href={{ "/favicon.ico" | relative_url }} />
-    <link rel="shortcut icon" type="image/x-icon" href={{ "/favicon.ico" | relative_url }} />
-
    <h1>{{ page.title }}</h1>
 
     <p>
@@ -15,3 +12,9 @@ layout: default
     </p>
 
     {{ content }}
+
+    <small>
+        {% for tag in page.tags %}
+        <a href="/tags/{{ tag }}.html">{{ tag }}</a>
+        {% endfor %}
+    </small>
