--- a/_sass/mymain.scss
+++ b/_sass/mymain.scss
@@ -1,11 +1,6 @@
-@import "minima";
-
-.current {
-    color: red !important;
-    background-color: lightgray;
-}
 
 p { text-align: justify;}
+
 mark {
     font-weight: bold; color: navy;
 }
@@ -17,3 +12,32 @@ mark::before, mark::after {
 del {
     background-color: lightgray;
 }
+
+.current {
+  color: red !important;
+}
+
+.b8t_clr {
+    clear: both;
+}
+
+.pagination a, .pagination span {
+    padding: 7px 18px;
+    border: 1px solid #eee;
+    margin-left: -2px;
+    margin-right: -2px;
+    background-color: #ffffff;
+    display: inline-block;
+  }
+
+.pagination a {    
+    &:hover {
+        background-color: #f1f1f1;
+        color: #333;
+    }
+ }
+
+.pagination {
+    text-align: center;
+ }
+
