--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -15,6 +15,6 @@ layout: default
 
     <small>
         {% for tag in page.tags %}
-        <a href="/tags/{{ tag }}.html">{{ tag }}</a>
+        <a class="b8t_label" href="{{ site.baseurl }}/tags/{{ tag }}.html">{{ tag }}</a>
         {% endfor %}
     </small>
