--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,31 +1,17 @@
-<footer class="site-footer h-card">
-  <data class="u-url" href="{{ "/" | relative_url }}"></data>
-
-  <div class="wrapper">
-
-    <div class="footer-col-wrapper">
-      <div class="footer-col">
-
-      {%- if site.author %}
-        <ul class="contact-list">
-          {% if site.author.name -%}
-            <li class="p-name">{{ site.author.name | escape }}</li>
-          {% endif -%}
-          {% if site.author.email -%}
-            <li><a class="u-email" href="mailto:{{ site.author.email }}">{{ site.author.email }}</a></li>
-          {%- endif %}
-        </ul>
-      {%- endif %}
-      </div>
-      <div class="footer-col">
-        <p>{{ site.description | escape }}</p>
-      </div>
-    </div>
-
-    <div class="social-links">
-      {%- include social.html -%}
-    </div>
-
-  </div>
-
+<footer>
+<div  class="pagination b8t_m0">
+    <a href="{{ '/sitemap.html' | relative_url }}">
+    sitemap
+    </a>
+    <a href="https://kissjgabi.github.io/b6school/backdoor.html" target="_blank">
+    links
+    </a>
+    <a href="{{ '/impressum.html' | relative_url }}">
+    Impressum
+    </a>
+    <a href="https://kissjgabi.github.io/gdpr/">
+    GDPR
+    </a>
+    <p style="text-align:center;">{{ site.description | escape }}</p>
+</div>
 </footer>
