--- a/_sass/b6theme/_layout.scss
+++ b/_sass/b6theme/_layout.scss
@@ -14,7 +14,7 @@
 .b8t-breadcrumb {
     margin: 0 auto;
     padding: 10px 30px;
-    width: 100%;
+    width: calc(100% - (30px * 2));
     max-width: calc(1024px - (30px * 2));
     border-bottom: 1px solid $brand-color-light;   
     font-variant: small-caps;
