--- a/_sass/mymain.scss
+++ b/_sass/mymain.scss
@@ -21,6 +21,10 @@ del {
     clear: both;
 }
 
+.b8t_m0 {
+    margin: 0 auto;
+}
+
 .pagination a, .pagination span {
     padding: 7px 18px;
     border: 1px solid #eee;
