update stage one github.com/kissjgabi/kiss

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -9,7 +9,7 @@
     <a href="{{ '/impressum.html' | relative_url }}">
     Impressum
     </a>
-    <a href="https://kissjgabi.github.io/gdpr/">
+    <a href="https://kissjgabi.github.io/gdpr/" target="_blank">
     GDPR
     </a>
     <p style="text-align:center;">{{ site.description | escape }}</p>
