--- a/_sass/mymain.scss
+++ b/_sass/mymain.scss
@@ -72,7 +72,7 @@ del {
 
 .b6-frontpage {
     z-index: -1;
-    position: absolute;
+    position: fixed;
     top: 0;
     left: 0;
     width: 96vw;
