update stage one github.com/kissjgabi/kiss

--- a/_sass/mymain.scss
+++ b/_sass/mymain.scss
@@ -51,6 +51,10 @@ del {
     border: 1px solid #eee;
 }
 
+.b8t_cell {
+    opacity: 0.95;
+}
+
 .b8t_label:hover {
     background-color: #f1f1f1;
     color: #333;
