--- a/_sass/b6theme/_base.scss
+++ b/_sass/b6theme/_base.scss
@@ -14,7 +14,6 @@ dl, dd, ol, ul, figure {
 }
 
 
-
 /**
  * Basic styling
  */
@@ -56,6 +55,7 @@ hr {
  */
 main {
   display: block; /* Default value of `display` of `main` element is 'inline' in IE 11. */
+
 }
 
 
@@ -252,10 +252,8 @@ pre {
  */
 table {
   margin-bottom: $spacing-unit;
-  width: 100%;
   text-align: $table-text-align;
   color: $table-text-color;
-  border-collapse: collapse;
   border: 1px solid $table-border-color;
   tr {
     &:nth-child(even) {
@@ -266,6 +264,7 @@ table {
     padding: ($spacing-unit / 3) ($spacing-unit / 2);
   }
   th {
+    min-width: 100%;
     background-color: $table-header-bg-color;
     border: 1px solid $table-header-border;
   }
@@ -273,10 +272,13 @@ table {
     border: 1px solid $table-border-color;
   }
 
-  @include media-query($on-laptop) {
     display: block;
+    white-space: nowrap;
     overflow-x: auto;
+
+  @include media-query($on-laptop) {
     -webkit-overflow-scrolling: touch;
             -ms-overflow-style: -ms-autohiding-scrollbar;
   }
 }
+
