--- a/_sass/mymain.scss
+++ b/_sass/mymain.scss
@@ -27,16 +27,16 @@ del {
 
 .pagination a, .pagination span {
     padding: 7px 18px;
-    border: 1px solid #eee;
+    border: 1px solid #ddd;
     margin-left: -2px;
     margin-right: -2px;
-    background-color: #ffffff;
+    background-color: #f3f3f3;
     display: inline-block;
   }
 
 .pagination a {    
     &:hover {
-        background-color: #f1f1f1;
+        background-color: #f8f8f8;
         color: #333;
     }
  }
@@ -48,7 +48,8 @@ del {
 .b8t_label, .b8t_cell {
     margin: 0 0.25em;
     padding: 0.25em 0.5em;
-    border: 1px solid #eee;
+    background-color: #f3f3f3;
+    border: 1px solid #ddd;
 }
 
 .b8t_cell {
@@ -56,7 +57,7 @@ del {
 }
 
 .b8t_label:hover {
-    background-color: #f1f1f1;
+    background-color: #f8f8f8;
     color: #333;
 }
 
